--- a/Gamis.html
+++ b/Gamis.html
@@ -9,6 +9,39 @@
 <body>
 <center>
 <h1> Ini Aneka Gamis </h1>
+<table border="1">
+	<tr>
+    	<th width="300px">Nama</th>
+        <th width="300px">Deskripsi</th>
+        <th width="200ppx">Harga</th>
+        <th width="100px">Gambar</th>
+	<tr>
+    	<td>Nama</td>
+        <td>Deskripsi</td>
+        <td>Harga</td>
+        <td>Gambar</td>
+
+    </tr>
+    <tr>
+    	<td> b2</td>
+        <td>b1,1</td>
+        <td>b1,1</td>
+        <td>b1,1</td>
+    </tr>
+    <tr>
+    	<td>b1,1</td>
+        <td>b1,1</td>
+        <td>b1,1</td>
+        <td>b1,1</td>
+    </tr>
+    <tr>
+    	<td> b2</td>
+        <td>b1,1</td>
+        <td>b1,1</td>
+        <td>b1,1</td>
+    </tr>
+    </table>
+        
 </center>
 </body>
 </html>
