--- a/Menutama.html
+++ b/Menutama.html
@@ -11,14 +11,18 @@
 Nisak Store
 </h1>
 </center>
+<div class="collapse navbar-collapse navbar-right">
+                    <ul class="nav navbar-nav">
 <table width="100%" border="0" bgcolor="#000000">
       <tr bgcolor="#7FFFD4"  height="40">
-        <th width="9%" scope="col"><a href="Home.html">Home</a></th>
-        <th width="10%" scope="col"><a href="Gamis.html">Gamis</a>	</th>
-        <th width="12%" scope="col"><a href="Khimar.html">Khimar</a></th>
-        <th width="11%" scope="col"><a href="Kontak.html">Kontak</a></th>
+        <th width="9%" scope="col"><a href="#Home">Home</a></th>
+        <th width="10%" scope="col"><a href="#Gamis">Gamis</a>	</th>
+        <th width="12%" scope="col"><a href="#Khimar">Khimar</a></th>
+        <th width="11%" scope="col"><a href="#Kontak">Kontak</a></th>
       </tr>
       </table>
+      </ul>
+      </div>
 
 </body>
 </html>
