--- a/Gamis.html
+++ b/Gamis.html
@@ -15,30 +15,35 @@
         <th width="300px">Deskripsi</th>
         <th width="200ppx">Harga</th>
         <th width="100px">Gambar</th>
-	<tr>
-    	<td>Nama</td>
-        <td>Deskripsi</td>
-        <td>Harga</td>
-        <td>Gambar</td>
-
+    <tr>
+    	<td>Style Marwah Syar'i Navy</td>
+        <td>Kain Abaya Prancis</td>
+        <td>Rp 285.000</td>
+        <td><img src="1.jpg" width="100"></td>
     </tr>
     <tr>
-    	<td> b2</td>
-        <td>b1,1</td>
-        <td>b1,1</td>
-        <td>b1,1</td>
+    	<td>Style Bella Syar'i perpaduan Abu-abu dan pink</td>
+        <td>Kain Betaloffi</td>
+        <td>Rp 235.000</td>
+        <td><img src="2.jpg" width="100"></td>
     </tr>
     <tr>
-    	<td>b1,1</td>
-        <td>b1,1</td>
-        <td>b1,1</td>
-        <td>b1,1</td>
+    	<td> Style Bella Syar'i perpaduan navy dan pink dusty</td>
+        <td>Kain wolfis grade B</td>
+        <td>Rp 255.000</td>
+        <td><img src="3.jpg" width="100"></td>
     </tr>
     <tr>
-    	<td> b2</td>
-        <td>b1,1</td>
-        <td>b1,1</td>
-        <td>b1,1</td>
+    	<td>Style Bella Syar'i perpaduan hitam dan colat pastel</td>
+        <td>Kain wolfis grade A</td>
+        <td>Rp 255.000</td>
+        <td><img src="5.jpg" width="100"></td>
+    </tr>
+    <tr>
+    	<td> Style Bella Syar'i perpaduan Unggu dan abu-abu</td>
+        <td>Kain wolfis grade A</td>
+        <td>Rp 255.000</td>
+        <td><img src="6.jpg" width="100"></td>
     </tr>
     </table>
         
