--- a/Gamis.html
+++ b/Gamis.html
@@ -8,7 +8,7 @@
 
 <body>
 <center>
-<h1> Ini Aneka Gamis </h1>
+<h1> <b> Ini Aneka Gamis </b></h1>
 <table border="1">
 	<tr>
     	<th width="300px">Nama</th>
