--- a/Khimar.html
+++ b/Khimar.html
@@ -7,7 +7,44 @@
 </head>
 <body>
 <center>
-<h1> Ini Aneka Khimar </h1>
+<h1><b> Ini Aneka Khimar</b> </h1>
+<table border="1">
+	<tr>
+    	<th width="300px">Nama</th>
+        <th width="300px">Deskripsi</th>
+        <th width="200ppx">Harga</th>
+        <th width="100px">Gambar</th>
+    <tr>
+    	<td>Khimar Tebal Colat</td>
+        <td>Kain Wolfis A</td>
+        <td>Rp 85.000</td>
+        <td><img src="k1.jpg" width="100"></td>
+    </tr>
+    <tr>
+    	<td>Khimar double slayer merah</td>
+        <td>Kain Betaloffi</td>
+        <td>Rp 65.000</td>
+        <td><img src="k2.jpg" width="100"></td>
+    </tr>
+    <tr>
+    	<td>Khimar Double Layer Abu-abu</td>
+        <td>Kain wolfis grade B</td>
+        <td>Rp 55.000</td>
+        <td><img src="k4.jpg" width="100"></td>
+    </tr>
+    <tr>
+    	<td>Khimar Pita Double layer hijau pastel</td>
+        <td>Kain wolfis grade A</td>
+        <td>Rp 95.000</td>
+        <td><img src="k3.jpg" width="100"></td>
+    </tr>
+    <tr>
+    	<td>Khimar Htam Double layer</td>
+        <td>Kain wolfis grade A</td>
+        <td>Rp 105.000</td>
+        <td><img src="k5.jpg" width="100"></td>
+    </tr>
+    </table>
 </center>
 </body>
 </html>
