--- a/Home.html
+++ b/Home.html
@@ -8,20 +8,51 @@
 <center>
 <h1> Ini Home </h1>
 </center>
-<div class="slider">		
-		<div id="about-slider">
+<div id="about-slider">
 			<div id="carousel-slider" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-					<div class="item active">						
-						<p style=”text-align:justify;”	><img src="0.jpg" class="img-responsive" alt="Syari" style="width:900px;height:600px;"/> Nisa Syar'i berdiri pada tahun 2017</p> 
+				<!-- Indicators -->
+				<ol class="carousel-indicators visible-xs">
+				</ol>
+
 				<div class="carousel-inner">
 					<div class="item active">						
+					<img src="h1.jpg" class="img-responsive" style="width:100%"; background-position: center;
+    background-repeat:
+    background-size: cover;" alt=""> 
 						<div class="carousel-caption">
 							<div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.3s">								
+								<h2><span>Elegan dengan busana Syar'i</span></h2>
+							</div>
+							<div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.6s">								
+								<p>Muslimah lebih cantik dengan pakaian syariat</p>
 							</div>
 							<div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.9s">								
 								<form class="form-inline">
 									<div class="form-group">
 									</div>
+								</form>
+							</div>
+						</div>
+				    </div>
+			
+				    <div class="item">
+						<img src="h2.jpg" class="img-responsive" style="width:100%"> 
+						<div class="carousel-caption">
+							<div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="1.0s">								
+								<h2>Full Cantik dengan Syar'i</h2>
+							</div>
+							<div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="1.3s">								
+								<p>Bidadari takk bersayap tapi berhijab</p>
+							</div>
+							<div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="1.6s">								
+								<form class="form-inline">
+									<div class="form-group">
+								</form>
+							</div>
+						</div>
+				    </div> 
+				<a class=" right carousel-control hidden-xs"href="#carousel-slider" data-slide="next">
+					<i class="fa fa-angle-right"></i> 
+				</a>
 </body>
 </html>
